--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <html>
   <head>
     <title>Jokes</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Patua+One|Playfair+Display|Alfa+Slab+One&display=swap" rel="stylesheet">
