--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <html>
   <head>
-    <title>Jokes</title>
+    <title>Joke API</title>
     <link rel="stylesheet" href="/style.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
 body {
   text-align: center;
   font-family: 'Open Sans', sans-serif;
-  background-image: url('https://source.unsplash.com/2560x1440/?city');
+  background-image: url('https://source.unsplash.com/2560x1440/');
 }
 
 h1, h3{
@@ -117,6 +117,7 @@ p {
     myPromise.then(fulfilled,rejected);
    
     function randomAdvice(){
+         document.location.reload();
       var newPromise = new Promise(sendRequest);
       newPromise.then(fulfilled,rejected);
     }
