--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ p {
       function fulfilled(data) {
       $('#setup').text(data.setup);
       $('#punchline').text(data.punchline);
-      $('body').css('background-image',"url('https://source.unsplash.com/2560x1440/?city')");  
+      $('body').css('background-image',"url('https://source.unsplash.com/2560x1440/')");  
     }
     function rejected() {
       alert('There is an error with joke API.');
